fullstack-notes-application/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx  # Cambiado de anotación a ingressClassName
  rules:
    - http:
        paths:
        - pathType: ImplementationSpecific  # Cambiado de Prefix a ImplementationSpecific
          path: "/?(.*)"
          backend:
            service:
              name: client-cluster-ip-service
              port: 
                number: 8080
        - pathType: ImplementationSpecific  # Cambiado de Prefix a ImplementationSpecific
          path: "/api/?(.*)"
          backend:
            service:
              name: api-cluster-ip-service
              port:
                number: 3000
